kubernetes-manifests/animals/animals.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
########
# APP_1
########
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: app
spec:
  selector:
    app: client
  ports:
    - name: client
      port: 8080
      targetPort: 3001
      nodePort: 30001
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3001'
        prometheus.io/path: '/swagger-stats/metrics'
    spec:
      containers:
        - name: client
          image: austinloveless/client:latest
          ports:
            - containerPort: 3001

########
# APP_2
########
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: app
spec:
  selector:
    app: server
  ports:
    - name: server
      port: 80
      targetPort: 3002
      nodePort: 30002
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3002'
        prometheus.io/path: '/swagger-stats/metrics'
    spec:
      containers:
        - name: server
          image: austinloveless/server:latest
          ports:
            - containerPort: 3002

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: client-service
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: server-service
              servicePort: 80
  # ANOTHER WAY TO DO THIS ^
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: app
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: instance
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /client/*
#             backend:
#               serviceName: client-service
#               servicePort: 80
#           - path: /server/*
#             backend:
#               serviceName: server-service
#               servicePort: 80
